# agent-aspect

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.relay  README.md  README.zh-CN.md  RELEASE_NOTES.md  docker-compose.relay.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
apps/macos/AgentAspect/: Package.swift
crates/bridge/: Cargo.toml
crates/bridge/src/: auth.rs  completion.rs  context.rs  jobs.rs  lib.rs  main.rs  provider.rs  relay_client.rs  routes.rs  scanner.rs  sse.rs  ui.rs  workflows.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  audit.rs  config.rs  constants.rs  conversation.rs  decision.rs  env_compat.rs  error.rs  event.rs  hook_status.rs  learn.rs  lib.rs  lifecycle.rs  normalize.rs  paths.rs  process_guard.rs  provider_registry.rs  provider_resolver.rs  provider_scanner.rs  rule.rs  runtime_profile.rs  title_import.rs  transcript.rs  transcript_sync.rs  utils.rs  wire.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/hook-cli/: Cargo.toml
crates/hook-cli/src/: main.rs
crates/relay/: Cargo.toml  build.rs
crates/shared_ui/: activity_segment.js  api_client.js  design_tokens.css  job_body.js  mod.rs  provider_capabilities.js  render.js  runtime_health.js  view_model.js
docs/: CODE_MAP.md  PLAN.md  config.md  open-source-scope.md  plan-m48-product-architecture-roadmap.md  provider-adapter-sdk.md  relay.md  security.md
scripts/: bridge_smoke_test.sh  provider_verify.sh  relay_smoke_test.sh  smoke_test.sh
(+78 files in other folders)
