[package]
name = "checkpoint-daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

[[bin]]
name = "checkpointd"
path = "src/main.rs"

[[bin]]
name = "agent-aspectd"
path = "src/main.rs"

[dependencies]
checkpoint-core = { path = "../core" }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v7"] }
